// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UIButton > Renders circular button 1`] = `
<button
  class="flex items-center justify-center transition text-base font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 bg-indigo-600 hover:bg-indigo-500 text-white rounded-full px-3 py-2"
>
  
  Test Button
  
</button>
`;

exports[`UIButton > Renders icon button 1`] = `
<button
  class="flex items-center justify-center transition text-base font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 bg-indigo-600 hover:bg-indigo-500 text-white rounded-md p-1"
>
  
  Test Button
  
</button>
`;

exports[`UIButton > Renders primary button 1`] = `
<button
  class="flex items-center justify-center transition text-base font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 bg-indigo-600 hover:bg-indigo-500 text-white rounded-md px-3 py-2"
>
  
  Test Button
  
</button>
`;

exports[`UIButton > Renders secondary button 1`] = `
<button
  class="flex items-center justify-center transition text-base font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 bg-gray-200 hover:bg-gray-100 text-gray-800 rounded-md px-3 py-2"
>
  
  Test Button
  
</button>
`;

exports[`UIButton > Renders the correct slot content 1`] = `
<button
  class="flex items-center justify-center transition text-base font-semibold shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600 bg-indigo-600 hover:bg-indigo-500 text-white rounded-md p-1"
>
  
  A Great Button
  
</button>
`;
